--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Application Status</h5>
-                        <p class="card-text">Application status of the candidate for the Internship Program</p>
-                        <a href="{% url 'application_status' %}" class="btn btn-danger">Application Status</a>
+                        <h5 class="card-title">Candidate Profile</h5>
+                        <p class="card-text">Profile of the candidate for the Internship Program</p>
+                        <a href="{% url 'candidate_profile' user.username %}" class="btn btn-danger">Candidate Profile</a>
                     </div>
                 </div>
             </div>
