--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,35 @@
     <div class="card-body">
         <div class="row mt-3">
             {% if user.is_authenticated %}
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Application Form</h5>
-                        <p class="card-text">Application form for the candidates who wants to join in our Internship Program</p>
-                        <a href="{% url 'application_form' %}" class="btn btn-success">Application Form</a>
-                     </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Candidate Profile</h5>
-                        <p class="card-text">Profile of the candidate for the Internship Program</p>
-                        <a href="{% url 'candidate_profile' user.username %}" class="btn btn-danger">Candidate Profile</a>
+                {% if user.is_superuser %}
+                    <center>
+                        <div class="card w-50 mt-3">
+                            <div class="card-body">
+                                <h2 class="card-title">Admin Account</h2>
+                                <a href="/admin" class="btn btn-primary w-75">Admin Panel</a>
+                            </div>
+                        </div>
+                    </center>
+                {% else %}
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Application Form</h5>
+                                <p class="card-text">Application form for the candidates who wants to join in our Internship Program</p>
+                                <a href="{% url 'application_form' %}" class="btn btn-success">Application Form</a>
+                             </div>
+                        </div>
                     </div>
-                </div>
-            </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Candidate Profile</h5>
+                                <p class="card-text">Profile of the candidate for the Internship Program</p>
+                                <a href="{% url 'candidate_profile' user.username %}" class="btn btn-danger">Candidate Profile</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
             {% else %}
             <div class="col-sm-6 mt-3">
                 <div class="card">
